--- a/secret_recipe_app.kv
+++ b/secret_recipe_app.kv
@@ -49,7 +49,7 @@
             on_release: root.get_random_recipe()
 
         MDLabel:
-            id: score_label
+            id: score_label   # not work
             text: "Score: 0"
             halign: "right"
             pos_hint: {"right": 0.98, "top": 0.1}
@@ -94,7 +94,7 @@
                 spacing: dp(10)
 
                 MDLabel:
-                    text: "[b]Ingredients:[/b]"
+                    text: "[b]Ingredients:[/b]"  # not work
                     markup: True
                     theme_text_color: "Custom"
                     text_color: 0.69, 0.44, 0.32, 1
