--- a/.vscode/secret_recipe_app.kv
+++ b/.vscode/secret_recipe_app.kv
@@ -48,6 +48,14 @@
             text_color: 1, 1, 1, 1
             on_release: root.get_random_recipe()
 
+        MDLabel:
+            id: score_label   # not work
+            text: "Score: 0"
+            halign: "right"
+            pos_hint: {"right": 0.98, "top": 0.1}
+            theme_text_color: "Custom"
+            text_color: 0.91, 0.49, 0.62, 1
+
 <DetailScreen>:
     MDFloatLayout:
         md_bg_color: 0.98, 0.94, 0.88, 1  # pastel beige
@@ -86,13 +94,15 @@
                 spacing: dp(10)
 
                 MDLabel:
-                    text: "[b]Ingredients:[/b]" 
+                    text: "[b]Ingredients:[/b]"  # not work
                     markup: True
                     theme_text_color: "Custom"
                     text_color: 0.69, 0.44, 0.32, 1
                     size_hint_y: None
                     height: self.texture_size[1]
 
+				# FIXED (Replaced RecycleView with MDLabel, because ingredients now is a String property)
+				# (It's possible to use RecycleView if ingredients will remain as List property, but it's the easiest way to fix this)
                 MDLabel:
                     text: root.ingredients
                     theme_text_color: "Custom"
@@ -102,6 +112,16 @@
                     text_size: self.width, None
                     halign: "left"
                     valign: "top"
+
+                #RecycleView:
+                #    viewclass: "MDLabel"
+                #    id: ingredients_list
+                #    RecycleBoxLayout:
+                #        default_size: None, dp(30)
+                #        default_size_hint: 1, None
+                #        size_hint_y: None
+                #        height: self.minimum_height
+                #        orientation: 'vertical'
 
                 MDLabel:
                     text: "[b]Instructions:[/b]"
